# generic-cli-apps

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
.specify/: feature.json  init-options.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
specs/001-create-mvp-moco-filler-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-create-mvp-moco-filler-app/contracts/: cli.md  moco-http.md
specs/001-moco-time-tracker/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-add-coloring-and-spacing-to-the-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-make-moco-filler/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-hamburg-holidays-skip/: spec.md
specs/004-cache-holidays-locally/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-cache-moco-api-key/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/moco_filler/: README.md  __init__.py  __main__.py  auth.py  calendar_utils.py  cli.py  credential_store.py  errors.py  holidays.py  moco_client.py  models.py  planner.py  preview.py  styling.py
tests/: test_auth.py  test_calendar_utils.py  test_credential_store.py  test_holidays.py  test_moco_client.py  test_models.py  test_planner.py  test_preview_logic.py  test_styling.py
(+13 files in other folders)
