[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moco-filler"
version = "0.1.0"
description = "Fill a month of Moco weekday time entries at 8h/day from the terminal."
readme = "src/moco_filler/README.md"
requires-python = ">=3.9"
license = { text = "Proprietary" }
authors = [{ name = "Statista" }]
dependencies = [
    "questionary>=2.0,<3.0",
    "requests>=2.31,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "responses>=0.25,<1.0",
]

[project.scripts]
moco-filler = "moco_filler.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
